--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+	<img src="https://media.istockphoto.com/id/1251033537/photo/portrait-of-a-blond-labrador-retriever-dog-looking-at-the-camera-with-a-big-happy-smile.jpg?s=2048x2048&w=is&k=20&c=xn_YHsbj3pIinOSLc3CZu06rQrPFEkWrRaPDxbUQzOE=" alt="DOG">
 
 </body>
 
